crates/ods-web/tests/snapshots/state_pages__journals__run_failed_test_explained.snap
---
source: crates/ods-web/tests/state_pages.rs
expression: row
---
 tabindex="-1"><td colspan="8"><div class="st-explain" data-confidence="known_pattern_with_evidence"><div class="st-explain-chips"><span class="st-chip-kind">test failure · test failed</span><span class="st-conf evidence" title="How sure ODS is">known pattern + evidence</span></div><h4 class="st-explain-head">The <code>not_null</code> test on <code>customer_id</code> of <code>customers</code> failed: 4 rows don't pass</h4><p class="st-explain-detail st-small">Failed test: <code>not_null</code> test on <code>customers.customer_id</code></p><div class="st-explain-sec"><h5 class="st-label">Why ODS thinks so</h5><ul><li>the fake engine reported 4 rows that fail the test. <span class="st-src">[run stats]</span></li><li>The project declares it as a <code>not_null</code> test of column <code>customer_id</code> on <code>customers</code>. <span class="st-src">[project]</span></li></ul></div><div class="st-explain-sec st-explain-where"><h5 class="st-label">Where</h5><div class="mono">models/<wbr>schema.yml</div></div><div class="st-explain-sec"><h5 class="st-label">What to try</h5><ol><li>See the rows that fail: run the test again, keeping them in a table in the warehouse:</li><li>Fix the data, the model or the test, then test <code>customers</code> again:</li></ol><div class="st-explain-cmd"><code>ods state test --select customers -- --store-failures</code><button type="button" class="st-btn" data-copy="ods state test --select customers -- --store-failures" aria-label="Copy ods state test --select customers -- --store-failures">Copy</button></div><div class="st-explain-cmd"><code>ods state test --select customers</code><button type="button" class="st-btn" data-copy="ods state test --select customers" aria-label="Copy ods state test --select customers">Copy</button></div></div><details class="st-explain-said"><summary>What the fake engine said</summary><pre class="st-error real"><strong>rows failed the test</strong>
&lt;b&gt;[value removed]&lt;/b&gt; &amp; [value removed]</pre><span class="st-small">Literal values and SQL removed.</span></details></div></td>
