crates/ods-web/tests/snapshots/state_pages__journals__run_failed_tests_without_a_node.snap
---
source: crates/ods-web/tests/state_pages.rs
expression: section
---
 tabindex="-1"><h3 class="st-label">Failed tests</h3><div class="st-failed-node"><span class="st-bar" aria-hidden="true"></span><code>accepted_values</code> test on <code>method</code></div><div class="st-explain" data-confidence="known_pattern_with_evidence"><div class="st-explain-chips"><span class="st-chip-kind">test failure · test failed</span><span class="st-conf evidence" title="How sure ODS is">known pattern + evidence</span></div><h4 class="st-explain-head">The <code>accepted_values</code> test on <code>method</code> failed: 3 rows don't pass</h4><p class="st-explain-detail st-small">Failed test: <code>accepted_values</code> test on <code>method</code></p><div class="st-explain-sec"><h5 class="st-label">Why ODS thinks so</h5><ul><li>the fake engine reported 3 rows that fail the test. <span class="st-src">[run stats]</span></li><li>The project declares it as a <code>accepted_values</code> test of column <code>method</code>. <span class="st-src">[project]</span></li></ul></div><details class="st-explain-said"><summary>What the fake engine said</summary><pre class="st-error real">rows failed the test ([value removed] like &lt;b&gt;[value removed]&lt;/b&gt;)</pre><span class="st-small">Literal values and SQL removed.</span></details></div></div>
