crates/ods-web/tests/snapshots/state_pages__journals__runs_from_journals.snap
---
source: crates/ods-web/tests/state_pages.rs
expression: pretty(&body)
---
{
  "ci": "CI runs — coming with server mode",
  "empty": null,
  "facets": [
    {
      "key": "outcome",
      "label": "Outcome",
      "options": [
        {
          "count": 5,
          "label": "All",
          "selected": false,
          "value": ""
        },
        {
          "count": 1,
          "label": "Succeeded",
          "selected": false,
          "value": "succeeded"
        },
        {
          "count": 1,
          "label": "Partial",
          "selected": true,
          "value": "partial"
        },
        {
          "count": 0,
          "label": "Failed",
          "selected": false,
          "value": "failed"
        },
        {
          "count": 1,
          "label": "Running or stopped",
          "selected": false,
          "value": "unfinished"
        },
        {
          "count": 0,
          "label": "Unknown",
          "selected": false,
          "value": "unknown"
        },
        {
          "count": 2,
          "label": "No journal",
          "selected": false,
          "value": "recorded"
        }
      ],
      "unavailable": null
    },
    {
      "key": "command",
      "label": "Command",
      "options": [
        {
          "count": 5,
          "label": "All",
          "selected": true,
          "value": ""
        }
      ],
      "unavailable": "Runs don't record their command yet"
    },
    {
      "key": "target",
      "label": "Target",
      "options": [
        {
          "count": 1,
          "label": "All",
          "selected": true,
          "value": ""
        },
        {
          "count": 0,
          "label": "dev",
          "selected": false,
          "value": "dev"
        }
      ],
      "unavailable": null
    },
    {
      "key": "date",
      "label": "Date",
      "options": [
        {
          "count": 1,
          "label": "All",
          "selected": true,
          "value": ""
        },
        {
          "count": 0,
          "label": "Last day",
          "selected": false,
          "value": "1d"
        },
        {
          "count": 1,
          "label": "Last 7 days",
          "selected": false,
          "value": "7d"
        },
        {
          "count": 1,
          "label": "Last 30 days",
          "selected": false,
          "value": "30d"
        }
      ],
      "unavailable": null
    }
  ],
  "failed": 0,
  "filtered": true,
  "last_run": null,
  "last_run_listed": false,
  "limit": 50,
  "listed": 1,
  "partial": 1,
  "project": "jaffle_ods",
  "recorded": [
    "Each run that recorded something is a snapshot: which nodes it built, and the last good build of every other node.",
    "Each run ODS executed also keeps a journal beside the store (the newest 50): how it ended, when each node started and finished, the rows it wrote where the adapter reported them, and each error as a one-line summary with values and SQL removed. A run that recorded no snapshot, e.g. a failed one, is listed from its journal.",
    "A snapshot doesn't record which of the other nodes were reused, left out or failed, so they read kept earlier build; the journal, when kept, says which failed.",
    "Without a journal, failures are only known for the last run, kept beside the store for `ods state retry`, and shown only for the target it ran for. It is tied to the run that has its run id; that it recorded nothing is inferred.",
    "Who ran each run isn't recorded yet."
  ],
  "recorded_snapshots": 0,
  "runs": [
    {
      "at": "2026-09-29T00:04:10Z",
      "built": 0,
      "command": null,
      "duration": "4.0s",
      "failed": 1,
      "from_last_run": false,
      "kept": 3,
      "kept_state": 3,
      "no_journal": null,
      "outcome": "partial",
      "outcome_from": "journal",
      "outcome_inferred": false,
      "outcome_note": "Its journal says the run failed: 1 failed, 1 succeeded.",
      "recorded_at": null,
      "replaces": null,
      "run_id": "7d21a0c4-0000-4000-8000-000000000004",
      "short_run_id": "7d21a0c4",
      "skipped": 1,
      "snapshot": null,
      "stats": {
        "by_status": {
          "error": 1,
          "skipped": 1,
          "success": 1
        },
        "duration": "4.0s",
        "duration_ms": 4000,
        "finished_at": "2026-09-29T00:04:14.000Z",
        "live": true,
        "nodes": 3,
        "rows": "at least 12",
        "rows_affected": 12,
        "rows_at_least": true,
        "rows_unreported": 1,
        "started_at": "2026-09-29T00:04:10.000Z",
        "unreadable_lines": 1
      },
      "target": null,
      "triggered_by": null
    }
  ],
  "schema_version": 2,
  "scope": "jaffle_ods/dev",
  "selected": "7d21a0c4-0000-4000-8000-000000000004",
  "selected_nodes": [
    {
      "adapter": {},
      "blocked_by": [],
      "compile": null,
      "end_offset_ms": 3800,
      "error": {
        "details_at": null,
        "kind": "Database Error",
        "message": "division by zero [SQL removed]"
      },
      "execute": null,
      "finished_at": "2026-09-29T00:04:13.800Z",
      "kind": null,
      "name": "orders",
      "node": "model.orders",
      "requested": true,
      "rows_affected": null,
      "rows_missing": "the node didn't build",
      "start_offset_ms": 200,
      "started_at": "2026-09-29T00:04:10.200Z",
      "status": "error",
      "status_label": "failed",
      "tests": null,
      "thread": "Thread-1 [value removed]",
      "took": "3.6s",
      "took_ms": 3600
    },
    {
      "adapter": {},
      "blocked_by": [
        {
          "name": "orders",
          "node": "model.orders"
        }
      ],
      "compile": null,
      "end_offset_ms": null,
      "error": null,
      "execute": null,
      "finished_at": null,
      "kind": null,
      "name": "model.orders_view",
      "node": "model.orders_view",
      "requested": true,
      "rows_affected": null,
      "rows_missing": "the node didn't build",
      "start_offset_ms": null,
      "started_at": null,
      "status": "skipped",
      "status_label": "skipped",
      "tests": null,
      "thread": null,
      "took": null,
      "took_ms": null
    }
  ],
  "state": "recorded",
  "store": {
    "full": ".ods/state.db",
    "shown": ".ods/state.db"
  },
  "total": 5,
  "total_capped": false,
  "unfiltered": 5,
  "unscoped_last_run": null
}
